# randle

./: PLAN.md  PLAN_PHASE_2.md  PLAN_PHASE_3.md  README.md  justfile
apps/appview/: Cargo.toml  rngdle.db
apps/appview/migrations/: 001_init.sql  002_streaks.sql  003_follows_cache.sql
apps/appview/src/: api.rs  db.rs  jetstream.rs  main.rs  scorer.rs  types.rs
apps/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/public/.well-known/atproto/oauth/: client.json
apps/web/src/: index.css  main.tsx  vite-env.d.ts
apps/web/src/components/: badge-icon.tsx  casino-reel.tsx  reveal-result.tsx  theme-toggle.tsx
apps/web/src/components/ui/: tooltip.tsx
apps/web/src/lexicon/: vg.nat.randle.roll.json
apps/web/src/lib/: atproto.ts  badge-icons.ts  badges.tsx  drand.ts  engine.ts  identity.ts  leaderboard.ts  oauth.ts  sound.ts  theme.ts
apps/web/src/routes/: callback.tsx  index.tsx  leaderboard.tsx  storybook-spinner.tsx  time-machine.tsx
apps/web/src/state/: session.ts
deploy/: Caddyfile  README.md  caddy.service  install.sh  rngdle-appview.service
rngdle-core/: Cargo.toml
rngdle-core/src/: badges.rs  cond.rs  lib.rs  props.rs  rarity.rs  roll.rs  score.rs  wasm.rs
rngdle-core/tests/: badges.rs  bench.rs  determinism.rs  edge_cases.rs  props.rs
