[package]
name = "rngdle-appview"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rngdle-core = { path = "../../rngdle-core" }

tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
chrono = "0.4"
futures-util = "0.3"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
